Adding a new job works

--- a/index.html
+++ b/index.html
@@ -7,51 +7,52 @@
     <div class-"jobs-container">
     
       <div class="job-container">
-        <h2>Job 1</h2>
-        <div>
-          <label for="materials-1">Material:</label>
-          <select id="materials-1">
-            <option value="timber">Timber</option>
-            <option value="dirt">Dirt</option>
-            <option value="limestone">Limestone</option>
-            <option value="granite">Granite</option>
-          </select>
-          <label for="quantity-1">Quantity (cubic meters):</label>
-          <input type="number" id="quantity-1" min="0" value="0">
+        <!--div class="job"-->
+          <h2>Job 1</h2>
+          <div>
+            <label for="materials-1">Material:</label>
+            <select id="materials-1">
+              <option value="timber">Timber</option>
+              <option value="dirt">Dirt</option>
+              <option value="limestone">Limestone</option>
+              <option value="granite">Granite</option>
+            </select>
+            <label for="quantity-1">Quantity (cubic meters):</label>
+            <input type="number" id="quantity-1" min="0" value="0">
+          </div>
+          <div>
+            <label>Collection Technology:</label>
+            <p id="base-energy-1"></p>
+            <select id="collection-technology-1"></select>
+          </div>
+          <div>
+            <label for="transportation-method-1">Transportation Method:</label>
+            <select id="transportation-method-1">
+              <option value="carry">Carry (3 kJ/ton/m)</option>
+              <option value="mule">Mule (0 kJ/ton/m)</option>
+              <option value="animal-pull-cart">Animal-Pull Cart (0 kJ/ton/m)</option>
+            </select>
+            <label for="distance-1">Distance (meters):</label>
+            <input type="number" id="distance-1" min="0" value="0">
+          </div>
+          <div>
+            <label for="processing-1">Processing:</label>
+            <select id="processing-1"></select>
+          </div>
+          <div>
+            <label for="putting-in-place-1">Putting in Place:</label>
+            <select id="putting-in-place-1"></select>
+          </div>
+          <button class="calculate-btn">Calculate Energy</button>
+          <div>
+            <label for="total-energy-1">Total Energy (kJ):</label>
+            <span id="total-energy-1">0</span>
+          </div>
         </div>
-        <div>
-          <label>Collection Technology:</label>
-          <p id="base-energy-1"></p>
-          <select id="collection-technology-1"></select>
-        </div>
-        <div>
-          <label for="transportation-method-1">Transportation Method:</label>
-          <select id="transportation-method-1">
-            <option value="carry">Carry (3 kJ/ton/m)</option>
-            <option value="mule">Mule (0 kJ/ton/m)</option>
-            <option value="animal-pull-cart">Animal-Pull Cart (0 kJ/ton/m)</option>
-          </select>
-          <label for="distance-1">Distance (meters):</label>
-          <input type="number" id="distance-1" min="0" value="0">
-        </div>
-        <div>
-          <label for="processing-1">Processing:</label>
-          <select id="processing-1"></select>
-        </div>
-        <div>
-          <label for="putting-in-place-1">Putting in Place:</label>
-          <select id="putting-in-place-1"></select>
-        </div>
-        <button class="calculate-btn">Calculate Energy</button>
-        <div>
-          <label for="total-energy-1">Total Energy (kJ):</label>
-          <span id="total-energy-1">0</span>
-        </div>
-      </div>
-
+      <!--/div-->
     </div>
-    <button id="add-job-btn">Add Job</button>
+    <button id="add-job-button">Add Job</button>
 
-    <script src="script.js"></script>
   </body>
+  <script src="script.js"></script>
 </html>
