Start of project listing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Construction Job Calculator</title>
   </head>
   <body>
+	<div id="project-list">
+		<table id="project-table">
+		</table>
+	</div>
     <div id="jobs-container">
       <button id="add-job-button">Add Job</button>
     </div>
