Layout and icons

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Construction Job Calculator</title>
   </head>
   <body>
-	<div id="project-list">
-		<table id="project-table">
-		</table>
-	</div>
+	<div id="main-wrapper">
+    <div id="project-menu">
+      <h2>Projects</h2>
+      <table id="project-table">
+      </table>
+    </div>
     <div id="jobs-container">
       <button id="add-job-button">Add Job</button>
     </div>
+	</div>
   </body>
   <script type="module" src="main.js"></script>
 </html>
