--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" type="image/png" href="image/favicon.png">
-    <title>Construction Job Calculator</title>
+    <title>Construction Energetics Calculator</title>
   </head>
   <body>
 	<div id="main-wrapper">
@@ -13,8 +13,8 @@
       </table>
     </div>
     <div id="jobs-container">
-      <button id="add-job-button">Add Job</button>
     </div>
+    <button id="add-job-button">Add Job</button>
 	</div>
   </body>
   <script type="module" src="main.js"></script>
