Fixing all sorts of bugs related to event cascading

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   </head>
   <body>
 	<div id="main-wrapper">
-    <div id="project-menu">
-      <h2>Projects</h2>
-      <table id="project-table">
-      </table>
+    <div id="left-part">
+      <div id="project-menu">
+        <h2>Projects</h2>
+        <table id="project-table">
+        </table>
+      </div>
+      <button id="add-job-button">Add Job</button>
     </div>
     <div id="jobs-container">
     </div>
-    <button id="add-job-button">Add Job</button>
 	</div>
   </body>
   <script type="module" src="main.js"></script>
