--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2>Projects</h2>
         <table id="project-table">
         </table>
+         <a id="downloadAnchorElem" style="display:none"></a>
       </div>
       <button id="add-job-button">Add Job</button>
     </div>
