--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <body>
 	<div id="main-wrapper">
     <div id="left-part">
-      <div id="project-menu">
+      <div id="project-list" class="panel">
         <h2>Projects</h2>
         <table id="project-table">
         </table>
          <a id="downloadAnchorElem" style="display:none"></a>
       </div>
-      <button id="add-job-button">Add Job</button>
+      <div id="project-menu" class="panel">
+        <h2 class="no-break-label">Total: </h2><h2 id="total-mh-label" class="no-break-label"></h2><br />
+        <button id="add-job-button">Add Job</button>
+      </div>
     </div>
     <div id="jobs-container">
     </div>
