Fixing file paths Some apparently forgotten css fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       </div>
       <div id="project-menu" class="panel">
         <h2 class="no-break-label">Total: </h2><h2 id="total-mh-label" class="no-break-label"></h2><br />
-        <button id="add-job-button">Add Job</button>
+        <button id="add-job-button" class="project-menu-button">Add Task</button>
+        <button id="clear-all-button" class="project-menu-button">Clear All</button>
       </div>
     </div>
     <div id="jobs-container">
