Display project name

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
          <a id="downloadAnchorElem" style="display:none"></a>
       </div>
       <div id="project-menu" class="panel">
+        <h2 id="project-name-label">N/A</h2>
         <h2 class="no-break-label">Total: </h2><h2 id="total-mh-label" class="no-break-label"></h2><br />
         <button id="add-job-button" class="project-menu-button">Add Task</button>
         <button id="clear-all-button" class="project-menu-button">Clear All</button>
